syntax = "proto3";

option csharp_namespace = "FP.ContainerTraining.Hpa.Contract";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service WorkerServices {
  rpc GetCommand ( GetCommandRequest) returns (stream GetCommandResponse);
  rpc SendResult ( SendResultRequest) returns (google.protobuf.Empty);
  
}

message GetCommandRequest {
  string instance = 1;
  google.protobuf.Timestamp timestamp = 2;
}


message GetCommandResponse {
  string id = 1;
  string command = 2;
}

message SendResultRequest{
  string id  = 1;
  string instance = 2;
}